tests/error/type_match/base_case_const_to_non_const_ref.bz
// error: unable to match expression of type 'const int32' to a non-const lvalue reference '&int32'
function test()
{
	const ci = 0i32;
	let _: &int32 = ci;
}
